--- a/CSS/test.css
+++ b/CSS/test.css
@@ -39,4 +39,10 @@ footer {
 }
 a {
     text-decoration: none;
+    color: rebeccapurple;
+    font-weight: 700;
+}
+h1, h2, h3 {
+    text-transform: uppercase;
+    letter-spacing: 0.5px;
 }
