--- a/CSS/test.css
+++ b/CSS/test.css
@@ -4,6 +4,10 @@
     border-bottom: 1px solid #131313;
     padding-bottom: 20px;
     font-size: 20px;
+    padding-top: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    align-items: center;
 }
 .logo {
     margin-right: 50px;
@@ -11,6 +15,10 @@
     color: lightgreen;
     background-color: rebeccapurple;
     font-weight: 700;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 ul {
     display: flex;
@@ -19,23 +27,25 @@ ul {
     margin: 0;
 }
 ul > li {
-    margin-right: 10px;
+    margin-right: 30px;
 }
 .box {
     display: flex;
     margin-bottom: 30px;
-    gap: 20px;
+    gap: 10px;
     border-bottom: 1px solid #000;
 }
 .aside {
-    border-right: 1px solid #000;
-    padding-right: 20px;
+    background-color: lavender;
+    margin: 10px 20px;
 }
 .post {
     padding-bottom: 20px;
 }
 footer {
-    font-size: 13px; 
+    font-size: 13px;
+    padding-left: 20px;
+    padding-right: 20px; 
 }
 a {
     text-decoration: none;
@@ -45,4 +55,9 @@ a {
 h1, h2, h3 {
     text-transform: uppercase;
     letter-spacing: 0.5px;
+}
+section {
+    background-color: lavender;
+    margin: 5px 20px;
+    padding-bottom: 20px;
 }
