--- a/CSS/test.css
+++ b/CSS/test.css
@@ -15,10 +15,7 @@
     color: lightgreen;
     background-color: rebeccapurple;
     font-weight: 700;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-top: 5px 15px;
 }
 ul {
     display: flex;
@@ -37,7 +34,7 @@ ul > li {
 }
 .aside {
     background-color: lavender;
-    margin: 10px 20px;
+    padding: 10px 20px;
 }
 .post {
     padding-bottom: 20px;
@@ -58,6 +55,6 @@ h1, h2, h3 {
 }
 section {
     background-color: lavender;
-    margin: 5px 20px;
+    padding: 5px 20px;
     padding-bottom: 20px;
 }
