--- a/CSS/test.css
+++ b/CSS/test.css
@@ -56,5 +56,5 @@ h1, h2, h3 {
 section {
     background-color: lavender;
     padding: 5px 20px;
-    padding-bottom: 20px;
+    margin-bottom: 20px;
 }
