--- a/CSS/test.css
+++ b/CSS/test.css
@@ -21,8 +21,7 @@
 ul {
     display: flex;
     list-style-type: none;
-    padding-left: 0;
-    margin: 0;
+    padding-left: 30px;
 }
 .box {
     display: flex;
@@ -46,6 +45,7 @@ a {
     text-decoration: none;
     font-weight: 700;
     color: rebeccapurple;
+    margin-right: 20px;
 }
 h1, h2, h3 {
     text-transform: uppercase;
